Invitation UI is created

--- a/.env
+++ b/.env
@@ -2,3 +2,5 @@ PORT=5000
 API_PORT=5001
 
 MONGO_URI="mongodb+srv://panther1980:TVPH9kxGrnvPFVbW@cluster0.aethqem.mongodb.net/discord?retryWrites=true&w=majority"
+
+TOKEN_KEY="super_secret_token_key"
